--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         }
     </style>
     <div class="container mt-5">
+        <h1 class="text-center mb-4">Prakiraan Cuaca BMKG</h1>
         <div id="lokasi-info" class="mb-4"></div>
         <div id="cuaca-data"></div>
     </div>
