--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prakiraan Cuaca BMKG</title>
+    <title>Prakiraan Cuaca Kabupaten Sidoarjo</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -43,13 +43,13 @@
         }
     </style>
     <div class="container mt-5">
-        <h1 class="text-center mb-4">Prakiraan Cuaca BMKG Wilayah Sidoarjo</h1>
+        <h1 class="text-center">Prakiraan Cuaca Kabupaten Sidoarjo</h1>
+        <h6 class="text-center mb-4">Sumber : BMKG</h6>
         <div id="lokasi-info" class="mb-4"></div>
         <div id="cuaca-data"></div>
-        <div class="mb-4">
-            <label for="desa-dropdown" class="form-label">Pilih Desa / Kelurahan</label>
+        <div class="my-3" id="desaform">
             <select id="desa-dropdown" class="form-select">
-                <option value="" disabled selected>Pilih Desa</option>
+                <option value="" disabled selected>Pilih Desa / Kelurahan</option>
             </select>
         </div>
     </div>
