--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
     <div id="preloader"></div>
     <style>
         #preloader {
@@ -42,7 +42,7 @@
             }
         }
     </style>
-    <div class="container mt-5">
+    <div class="container mt-5 flex-grow-1">
         <h1 class="text-center">Prakiraan Cuaca Kabupaten Sidoarjo</h1>
         <h6 class="text-center mb-4">Sumber : BMKG</h6>
         <div id="lokasi-info" class="mb-4"></div>
@@ -53,7 +53,19 @@
             </select>
         </div>
     </div>
+    <!--Footer-->
+    <footer class="text-white" style="background-color:#3A0241">
+        <div class="container">
+            <div class="row pt-3">
+                <div class="col text-center">
+                    <p>Copyright ©  <span id="year"></span> by Kang Erlangga - All Rights Reserved.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!--Akhir Footer-->
     <script>
+        document.getElementById("year").textContent = new Date().getFullYear();
         let preloader = document.querySelector('#preloader');
         if (preloader) {
             window.addEventListener('load', () => {
