--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <!-- DSelect Library -->
+    <link rel="stylesheet" href="https://unpkg.com/@jarstone/dselect/dist/css/dselect.css">
+    <script src="https://unpkg.com/@jarstone/dselect/dist/js/dselect.js"></script>
 </head>
 <body class="d-flex flex-column min-vh-100">
     <div id="preloader"></div>
@@ -48,7 +52,7 @@
         <div id="lokasi-info" class="mb-4"></div>
         <div id="cuaca-data"></div>
         <div class="my-3" id="desaform">
-            <select id="desa-dropdown" class="form-select">
+            <select id="desa-dropdown" class="form-select" data-dselect-search="true" data-dselect-clearable="true">
                 <option value="" disabled selected>Pilih Desa / Kelurahan</option>
             </select>
         </div>
@@ -66,6 +70,7 @@
     <!--Akhir Footer-->
     <script>
         document.getElementById("year").textContent = new Date().getFullYear();
+        dselect(document.querySelector('#desa-dropdown'))
         let preloader = document.querySelector('#preloader');
         if (preloader) {
             window.addEventListener('load', () => {
