--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div id="lokasi-info" class="mb-4"></div>
         <div id="cuaca-data"></div>
         <div class="my-3" id="desaform">
-            <select id="desa-dropdown" class="form-select" data-dselect-search="true" data-dselect-clearable="true">
+            <select id="desa-dropdown" class="form-select">
                 <option value="" disabled selected>Pilih Desa / Kelurahan</option>
             </select>
         </div>
