--- a/index.html
+++ b/index.html
@@ -68,9 +68,11 @@
         </div>
     </footer>
     <!--Akhir Footer-->
+    <script src="main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script>
         document.getElementById("year").textContent = new Date().getFullYear();
-        // dselect(document.querySelector('#desa-dropdown'));
+        dselect(document.querySelector('#desa-dropdown'));
         let preloader = document.querySelector('#preloader');
         if (preloader) {
             window.addEventListener('load', () => {
@@ -80,7 +82,5 @@
             console.log('Preloader not found');
         }
     </script>
-    <script src="main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
