--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <script src="https://unpkg.com/@jarstone/dselect/dist/js/dselect.js"></script>
     <script>
         document.getElementById("year").textContent = new Date().getFullYear();
-        dselect(document.querySelector('#desa-dropdown'));
+        // dselect(document.querySelector('#desa-dropdown'));
         let preloader = document.querySelector('#preloader');
         if (preloader) {
             window.addEventListener('load', () => {
